big huge update

--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -22,125 +22,213 @@ layout: default
 
   <div class="p-5 section-uiux" id="uiux">
     <div class="row">
-      <h2 class="ml-2">ui/ux</h2>
-    </div>
-    <div class="row">
-      <p class="ml-2 primary-color">I make notes on cocktail napkins and turn them into pixel perfect designs with empathy for both the user and developer.</p>
-    </div>
-    <div class="row">
-      <div class="col-sm">
-        <div>
-          <h3 class="pt-3 primary-color">User Experience</h3>
-          <p class="primary-color">
-            "Empathy for the user" is my motto when it comes to making sure they have a good experience with a website or app.  I work meticulously to make sure all areas of an app and edge cases are addressed.
-          </p>
-          <p>
-            Learn more by clicking <a href="pages/ui.html">here</a>.
-          </p>
-          <img class="img-circle" src="assets/img/iterations.png" />
+      <div class="row d-flex">
+        <div class="row">
+          <h2 class="ml-2">UI/UX</h2>
         </div>
       </div>
-      <div class="col-sm">
-        <h3 class="pt-3 primary-color">User Interface</h3>
-        <p class="primary-color">
-          Pixel perfect designs are not just for looks but allows the development team to know exactly how a feature, app or website is supposd to look like and work.  I aim to make each design look exaclty like what the user would see.
-        </p>
-        <p>
-          Learn more by clicking <a href="pages/ux.html">here</a>.
-        </p>
-        <img class="img-circle" src="assets/img/testitout.png" />
+      <div class="row d-flex">
+        <div class="col-md-6">
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-12 d-flex flex-column justify-content-center">
+              <div class="row">
+                <h2 class="ml-2">User Experience</h2>
+              </div>
+              <div class="row">
+                <p class="ml-2 primary-color">Something about empathy</p>
+                <div class="row">
+                  <div class="col-sm">
+                    <div class="col d-flex flex-row">
+                      <div class="col-sm-4">
+                        <img class="img-circle img-size-small" src="assets/img/iterations.png" />
+                      </div>
+                      <div  class="col-sm-8">
+                        <p class="primary-color">
+                          For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
+                        </p>
+                        <p>
+                          Learn more by clicking <a href="pages/about.html">here</a>.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-md-6">
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-12 d-flex flex-column justify-content-center">
+              <div class="row">
+                <h2 class="ml-2">User Interface</h2>
+              </div>
+              <div class="row">
+                <p class="ml-2 primary-color">Some ui words</p>
+                <div class="row">
+                  <div class="col-sm">
+                    <div class="col d-flex flex-row">
+                      <div class="col-sm-4">
+                        <img class="img-circle img-size-small" src="assets/img/testitout.png" />
+                      </div>
+                      <div  class="col-sm-8">
+                        <p class="primary-color">
+                          For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
+                        </p>
+                        <p>
+                          Learn more by clicking <a href="pages/about.html">here</a>.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
   </div>
 
 
-  <div class="p-5 section-code d-flex justify-content-center flex-wrap " id="code">
-    <div class="row">
-      <h2 class="ml-2">Front End Development</h2>
-    </div>
-    <div class="row">
-      <p class="ml-2 primary-color">I'm like Mark Haml on board the ES6 spaceship SASSing everyone</p>
-    </div>
-    <div class="row">
-      <div class="col-sm">
-        <div class="col d-flex flex-row">
-          <div class="col-sm-1">
-            <img class="img-circle img-size-small" src="assets/img/code.png" />
+  <div class="p-5 section-code" id="code">
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-8 d-flex flex-column justify-content-center">
+        <div class="row">
+        <h2 class="ml-2">Front End Development</h2>
+      </div>
+      <div class="row">
+        <p class="ml-2 primary-color">I'm like Mark Haml on board the ES6 spaceship SASSing everyone</p>
+      <div class="row">
+        <div class="col-sm">
+          <div class="col d-flex flex-row">
+            <div class="col-sm-4">
+              <img class="img-circle img-size-small" src="assets/img/code.png" />
+            </div>
+            <div  class="col-sm-8">
+              <p class="primary-color">
+                In addition to being a designer I am well versed in front end coding being able to develop my own designs into full blown code for websites.  This includes not only knowing HTML, CSS and Javascript but also knowing HAML, React, SASS, HTML5 and Boostrap.
+              </p>
+              <p>
+                Learn more by clicking <a href="pages/code.html">here</a>.
+              </p>
+            </div>
           </div>
-          <div  class="col-sm-6">
-
-            <p class="primary-color">
-              In addition to being a designer I am well versed in front end coding being able to develop my own designs into full blown code for websites.  This includes not only knowing HTML, CSS and Javascript but also knowing HAML, React, SASS, HTML5 and Boostrap.
-            </p>
-            <p>
-              Learn more by clicking <a href="pages/code.html">here</a>.
-          </div>
-          </p>
         </div>
       </div>
+      </div>
+    </div>
     </div>
   </div>
 
 
-    <div class="p-5 section-illo" id="illustration">
+<div class="p-5 section-illo" id="illustration">
+  <div class="row">
+    <div class="row d-flex">
       <div class="row">
         <h2 class="ml-2">Illustration</h2>
       </div>
-      <div class="row">
-        <p class="ml-2 primary-color">One image for one thousand words</p>
-      </div>
-      <div class="row">
-        <div class="col-sm">
-          <div>
-            <img class="img-circle" src="assets/img/nuyu.jpg" />
-            <h3 class="pt-3 primary-color">Print Media</h3>
-            <p class="primary-color">
-              Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
-            </p>
-            <p>
-              Learn more by clicking <a href="pages/illustration.html">here</a>.
-            </p>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-12 d-flex flex-column justify-content-center">
+            <div class="row">
+              <h2 class="ml-2">Print Media</h2>
+            </div>
+            <div class="row">
+              <p class="ml-2 primary-color">For over 20 years blah blah blah...</p>
+              <div class="row">
+                <div class="col-sm">
+                  <div class="col d-flex flex-row">
+                    <div class="col-sm-4">
+                      <img class="img-circle img-size-small" src="assets/img/nuyu.jpg" />
+                    </div>
+                    <div  class="col-sm-8">
+                      <p class="primary-color">
+                        For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
+                      </p>
+                      <p>
+                        Learn more by clicking <a href="pages/about.html">here</a>.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-sm">
-          <img class="img-circle" src="assets/img/kedi.gif" />
-          <h3 class="pt-3 primary-color">Web and Animation</h3>
-          <p class="primary-color">
-            Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
-          </p>
-          <p>
-            Learn more by clicking <a href="pages/animation.html">here</a>.
-          </p>
-        </div>
+
       </div>
-    </div>
-
-  <div class="p-5 section-about" id="about">
-    <div class="row pt-5 offset-200">
-      <h2 class="ml-2 pt-5">About Me</h2>
-    </div>
-    <div class="row">
-      <p class="ml-2 primary-color">Jack of all trades, master of a few of them.</p>
-    </div>
-    <div class="row">
-      <div class="col d-flex flex-row">
-        <div class="col-md-3">
-
-          <img class="img-circle" src="assets/img/me.jpg" />
+      <div class="col-md-6">
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-12 d-flex flex-column justify-content-center">
+            <div class="row">
+              <h2 class="ml-2">Web Animation</h2>
+            </div>
+            <div class="row">
+              <p class="ml-2 primary-color">I worked for Shrek blah blah blah</p>
+              <div class="row">
+                <div class="col-sm">
+                  <div class="col d-flex flex-row">
+                    <div class="col-sm-4">
+                      <img class="img-circle img-size-small" src="assets/img/kedi.gif" />
+                    </div>
+                    <div  class="col-sm-8">
+                      <p class="primary-color">
+                        For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
+                      </p>
+                      <p>
+                        Learn more by clicking <a href="pages/about.html">here</a>.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-3">
 
-          <h3 class="primary-color">Howdy y'all</h3>
-          <p class="primary-color">
-          For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
-        </p>
-        <p>
-          Also I love my dog, Tess.
-        </p>
-        <p>
-          Learn more by clicking <a href="pages/about.html">here</a>.
-        </p>
-      </div>
       </div>
     </div>
   </div>
+</div>
+
+
+
+
+
+
+
+
+    <div class="p-5 section-about" id="code">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-8 d-flex flex-column justify-content-center">
+          <div class="row">
+          <h2 class="ml-2">About Me</h2>
+        </div>
+        <div class="row">
+          <p class="ml-2 primary-color">Jack of all trades, master of a few of them.</p>
+        <div class="row">
+          <div class="col-sm">
+            <div class="col d-flex flex-row">
+              <div class="col-sm-4">
+                <img class="img-circle img-size-small" src="assets/img/me.JPG" />
+              </div>
+              <div  class="col-sm-8">
+                <p class="primary-color">
+                  For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
+                </p>
+                <p>
+                  Learn more by clicking <a href="pages/about.html">here</a>.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+      </div>
+    </div>
