--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -20,15 +20,12 @@ layout: default
     </div>
   </div>
 
-  <div class="p-5 section-uiux" id="uiux">
-    <div class="row">
-      <div class="row d-flex">
-        <div class="row">
-          <h2 class="ml-2">UI/UX</h2>
-        </div>
+    <div class="p-5 section-uiux row" id="uiux">
+      <div class="row">
+        <h2 class="ml-2">UI/UX</h2>
       </div>
-      <div class="row d-flex">
-        <div class="col-md-6">
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
           <div class="row d-flex justify-content-center">
             <div class="col-md-12 d-flex flex-column justify-content-center">
               <div class="row">
@@ -39,10 +36,10 @@ layout: default
                 <div class="row">
                   <div class="col-sm">
                     <div class="col d-flex flex-row">
-                      <div class="col-sm-4">
+                      <div class="col-xs-12 col-lg-6">
                         <img class="img-circle img-size-small" src="assets/img/iterations.png" />
                       </div>
-                      <div  class="col-sm-8">
+                      <div  class="col-xs-12 col-lg-6">
                         <p class="primary-color">
                           For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
                         </p>
@@ -55,10 +52,11 @@ layout: default
                 </div>
               </div>
             </div>
-          </div>
 
+          </div>
         </div>
-        <div class="col-md-6">
+
+        <div class="col-xs-12 col-md-6">
           <div class="row d-flex justify-content-center">
             <div class="col-md-12 d-flex flex-column justify-content-center">
               <div class="row">
@@ -90,7 +88,7 @@ layout: default
         </div>
       </div>
     </div>
-  </div>
+
 
 
   <div class="p-5 section-code" id="code">
