--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -35,7 +35,7 @@ layout: default
                 <p class="ml-2 primary-color">Something about empathy</p>
                 <div class="row">
                   <div class="col-sm">
-                    <div class="col d-flex flex-row">
+                    <div class="row p-1">
                       <div class="col-xs-12 col-lg-6">
                         <img class="img-circle img-size-small" src="assets/img/iterations.png" />
                       </div>
@@ -52,10 +52,8 @@ layout: default
                 </div>
               </div>
             </div>
-
           </div>
         </div>
-
         <div class="col-xs-12 col-md-6">
           <div class="row d-flex justify-content-center">
             <div class="col-md-12 d-flex flex-column justify-content-center">
@@ -66,11 +64,11 @@ layout: default
                 <p class="ml-2 primary-color">Some ui words</p>
                 <div class="row">
                   <div class="col-sm">
-                    <div class="col d-flex flex-row">
-                      <div class="col-sm-4">
+                    <div class="row p-1">
+                      <div class="col-xs-12 col-lg-6">
                         <img class="img-circle img-size-small" src="assets/img/testitout.png" />
                       </div>
-                      <div  class="col-sm-8">
+                      <div  class="col-xs-12 col-lg-6">
                         <p class="primary-color">
                           For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
                         </p>
@@ -84,12 +82,19 @@ layout: default
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </div>
 
+<div class="row">
+  <div class="col-lg-6">
+        {% include info_section.html section="code" title="UX" subtitle="User Experience" blurb="Some stuff about user ex" image="iterations.png" content="For over twenty years I've been a professional in the creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="uxui.html" %}
+  </div>
+  <div class="col-lg-6">
 
+    {% include info_section.html section="code" title="UI" subtitle="User Interface" blurb="Some stuff about user interfact" image="testitout.png" content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="ui.html" %}
+  </div>
+</div>
 
   <div class="p-5 section-code" id="code">
     <div class="row d-flex justify-content-center">
