responsiveness works fine in partials

--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -20,218 +20,59 @@ layout: default
     </div>
   </div>
 
-    <div class="p-5 section-uiux row" id="uiux">
-      <div class="row">
-        <h2 class="ml-2">UI/UX</h2>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 col-md-6">
-          <div class="row d-flex justify-content-center">
-            <div class="col-md-12 d-flex flex-column justify-content-center">
-              <div class="row">
-                <h2 class="ml-2">User Experience</h2>
-              </div>
-              <div class="row">
-                <p class="ml-2 primary-color">Something about empathy</p>
-                <div class="row">
-                  <div class="col-sm">
-                    <div class="row p-1">
-                      <div class="col-xs-12 col-lg-6">
-                        <img class="img-circle img-size-small" src="assets/img/iterations.png" />
-                      </div>
-                      <div  class="col-xs-12 col-lg-6">
-                        <p class="primary-color">
-                          For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
-                        </p>
-                        <p>
-                          Learn more by clicking <a href="pages/about.html">here</a>.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-6">
-          <div class="row d-flex justify-content-center">
-            <div class="col-md-12 d-flex flex-column justify-content-center">
-              <div class="row">
-                <h2 class="ml-2">User Interface</h2>
-              </div>
-              <div class="row">
-                <p class="ml-2 primary-color">Some ui words</p>
-                <div class="row">
-                  <div class="col-sm">
-                    <div class="row p-1">
-                      <div class="col-xs-12 col-lg-6">
-                        <img class="img-circle img-size-small" src="assets/img/testitout.png" />
-                      </div>
-                      <div  class="col-xs-12 col-lg-6">
-                        <p class="primary-color">
-                          For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
-                        </p>
-                        <p>
-                          Learn more by clicking <a href="pages/about.html">here</a>.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-<div class="row">
+<div class="row p-5 section-uiux" id="uiux">
   <div class="col-lg-6">
-        {% include info_section.html section="code" title="UX" subtitle="User Experience" blurb="Some stuff about user ex" image="iterations.png" content="For over twenty years I've been a professional in the creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="uxui.html" %}
+    {% include info_section.html
+       section="code"
+       title="UX"
+       subtitle="User Experience"
+        blurb="Some stuff about user ex"
+        image="iterations.png"
+        content="For over twenty years I've been a professional in the creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world."
+        linktopage="uxui.html" %}
   </div>
   <div class="col-lg-6">
-
-    {% include info_section.html section="code" title="UI" subtitle="User Interface" blurb="Some stuff about user interfact" image="testitout.png" content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="ui.html" %}
+    {% include info_section.html
+       section="code"
+       title="UI"
+       subtitle="User Interface"
+       blurb="Some stuff about user interfact"
+       image="testitout.png" content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world."
+       linktopage="ui.html" %}
   </div>
 </div>
 
-  <div class="p-5 section-code" id="code">
-    <div class="row d-flex justify-content-center">
-      <div class="col-md-8 d-flex flex-column justify-content-center">
-        <div class="row">
-        <h2 class="ml-2">Front End Development</h2>
-      </div>
-      <div class="row">
-        <p class="ml-2 primary-color">I'm like Mark Haml on board the ES6 spaceship SASSing everyone</p>
-      <div class="row">
-        <div class="col-sm">
-          <div class="col d-flex flex-row">
-            <div class="col-sm-4">
-              <img class="img-circle img-size-small" src="assets/img/code.png" />
-            </div>
-            <div  class="col-sm-8">
-              <p class="primary-color">
-                In addition to being a designer I am well versed in front end coding being able to develop my own designs into full blown code for websites.  This includes not only knowing HTML, CSS and Javascript but also knowing HAML, React, SASS, HTML5 and Boostrap.
-              </p>
-              <p>
-                Learn more by clicking <a href="pages/code.html">here</a>.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      </div>
-    </div>
-    </div>
-  </div>
-
-
-<div class="p-5 section-illo" id="illustration">
-  <div class="row">
-    <div class="row d-flex">
-      <div class="row">
-        <h2 class="ml-2">Illustration</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="row d-flex justify-content-center">
-          <div class="col-md-12 d-flex flex-column justify-content-center">
-            <div class="row">
-              <h2 class="ml-2">Print Media</h2>
-            </div>
-            <div class="row">
-              <p class="ml-2 primary-color">For over 20 years blah blah blah...</p>
-              <div class="row">
-                <div class="col-sm">
-                  <div class="col d-flex flex-row">
-                    <div class="col-sm-4">
-                      <img class="img-circle img-size-small" src="assets/img/nuyu.jpg" />
-                    </div>
-                    <div  class="col-sm-8">
-                      <p class="primary-color">
-                        For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
-                      </p>
-                      <p>
-                        Learn more by clicking <a href="pages/about.html">here</a>.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-      <div class="col-md-6">
-        <div class="row d-flex justify-content-center">
-          <div class="col-md-12 d-flex flex-column justify-content-center">
-            <div class="row">
-              <h2 class="ml-2">Web Animation</h2>
-            </div>
-            <div class="row">
-              <p class="ml-2 primary-color">I worked for Shrek blah blah blah</p>
-              <div class="row">
-                <div class="col-sm">
-                  <div class="col d-flex flex-row">
-                    <div class="col-sm-4">
-                      <img class="img-circle img-size-small" src="assets/img/kedi.gif" />
-                    </div>
-                    <div  class="col-sm-8">
-                      <p class="primary-color">
-                        For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
-                      </p>
-                      <p>
-                        Learn more by clicking <a href="pages/about.html">here</a>.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
+<div class="p-5 section-about" id="code">
+  <div class="col-lg-12">
+    {% include info_section.html
+      section="code"
+      title="Front End Development"
+      subtitle="I'm like Mark Haml on board the ES6 spaceship SASSing everyone"
+      blurb="Some stuff about user interfact"
+      image="code.png"
+      content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world."
+      linktopage="code.html" %}
   </div>
 </div>
 
 
-
-
-
-
-
-
-    <div class="p-5 section-about" id="code">
-      <div class="row d-flex justify-content-center">
-        <div class="col-md-8 d-flex flex-column justify-content-center">
-          <div class="row">
-          <h2 class="ml-2">About Me</h2>
-        </div>
-        <div class="row">
-          <p class="ml-2 primary-color">Jack of all trades, master of a few of them.</p>
-        <div class="row">
-          <div class="col-sm">
-            <div class="col d-flex flex-row">
-              <div class="col-sm-4">
-                <img class="img-circle img-size-small" src="assets/img/me.JPG" />
-              </div>
-              <div  class="col-sm-8">
-                <p class="primary-color">
-                  For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
-                </p>
-                <p>
-                  Learn more by clicking <a href="pages/about.html">here</a>.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        </div>
-      </div>
-      </div>
+  <div class="row p-5 section-illo" id="illustration">
+    <div class="col-lg-6">
+      {% include info_section.html
+         section="illustration"
+         title="Illustration" subtitle="Illustration" blurb="For over 20 years blah blah blah..." image="nuyu.jpg" content="For over twenty years I've been a professional in the creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="illustration.html" %}
     </div>
+    <div class="col-lg-6">
+      {% include info_section.html
+         section="animat
+         ion" title="Animation" subtitle="Animation" blurb="Some stuff about user interfact" image="kedi.gif" content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="animation.html" %}
+    </div>
+  </div>
+
+<div class="p-5 section-about" id="About">
+  <div class="col-lg-12">
+    {% include info_section.html
+       section="About
+       Me" title="About Me" subtitle="Jack of all trades, master of a few of them." blurb="Some stuff about user interfact" image="me.JPG" content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="animation.html" %}
+  </div>
+</div>
