--- a/my-awesome-site/_includes/info_section.html
+++ b/my-awesome-site/_includes/info_section.html
@@ -1,7 +1,7 @@
-<div class="d-flex justify-content-center p-5 section-{{ include.section }} row" id="{{ include.section }}">
-  <div class="col-md-10">
+<!-- <div class="d-flex justify-content-center p-5 section-{{ include.section }} row" id="{{ include.section }}"> -->
+  <!-- <div class="col-md-10">
     <h2 class="ml-2">{{ include.title }}</h2>
-  </div>
+  </div> -->
   <div class="row d-flex justify-content-center">
     <div class="col-xs-12 col-md-6 col-lg-8">
       <div class="row d-flex justify-content-center">
@@ -14,10 +14,10 @@
             <div class="row">
               <div class="col-sm">
                 <div class="row p-1">
-                  <div class="col-xs-12 col-lg-6">
+                  <div class="col-xs-12 col-lg-4">
                     <img class="img-circle img-size-small" src="assets/img/{{ include.image }}" />
                   </div>
-                  <div  class="col-xs-12 col-lg-6">
+                  <div  class="col-xs-12 col-lg-8">
                     <p class="primary-color">
                       {{ include.content }}
                     </p>
@@ -34,4 +34,4 @@
     </div>
 
   </div>
-</div>
+<!-- </div> -->
