--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -19,6 +19,11 @@ layout: default
       </div>
     </div>
   </div>
+  <div class="row">
+    <section id="section03" class="demo d-flex justify-content-center">
+      <a href="#uiux"><span></span>More</a>
+    </section>
+  </div>
 
 <div class="row p-5 section-uiux" id="uiux">
   <div class="col-lg-6">
@@ -26,10 +31,10 @@ layout: default
        section="code"
        title="UX"
        subtitle="User Experience"
-        blurb="Some stuff about user ex"
-        image="iterations.png"
-        content="For over twenty years I've been a professional in the creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world."
-        linktopage="uxui.html" %}
+       blurb="Some stuff about user ex"
+       image="iterations.png"
+       content="For over twenty years I've been a professional in the creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world."
+       linktopage="uxui.html" %}
   </div>
   <div class="col-lg-6">
     {% include info_section.html
@@ -60,16 +65,20 @@ layout: default
     <div class="col-lg-6">
       {% include info_section.html
          section="illustration"
-         title="Illustration" subtitle="Illustration" blurb="For over 20 years blah blah blah..." image="nuyu.jpg" content="For over twenty years I've been a professional in the creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="illustration.html" %}
+         title="Illustration"
+         subtitle="Illustration"
+         blurb="For over 20 years blah blah blah..."
+         image="nuyu.jpg" content="For over twenty years I've been a professional in the creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world."
+         linktopage="illustration.html" %}
     </div>
     <div class="col-lg-6">
       {% include info_section.html
-         section="animat
-         ion" title="Animation" subtitle="Animation" blurb="Some stuff about user interfact" image="kedi.gif" content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="animation.html" %}
+         section="animantion"
+         title="Animation" subtitle="Animation" blurb="Some stuff about user interfact" image="kedi.gif" content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="animation.html" %}
     </div>
   </div>
 
-<div class="p-5 section-about" id="About">
+<div class="p-5 section-about" id="about">
   <div class="col-lg-12">
     {% include info_section.html
        section="About
