fixed nav bar toggler

--- a/my-awesome-site/_sass/_layout.scss
+++ b/my-awesome-site/_sass/_layout.scss
@@ -98,3 +98,53 @@ $color30darken: darken($color1, 30%);
       visibility: hidden;
   }
 }
+
+
+// .navbar {
+//   margin-bottom: 0;
+//   background-color: #f4511e;
+//   z-index: 9999;
+//   border: 0;
+//   font-family: Montserrat, sans-serif;
+//   font-size: 12px !important;
+//   letter-spacing: 4px;
+//   border-radius: 0;
+// }
+//
+// .navbar li a,
+// .navbar .navbar-brand {
+//   color: #FFFFFF !important;
+// }
+//
+// .navbar-nav li a:hover,
+// .navbar-nav li.active a {
+//   color: #f4511e !important;
+//   background-color: #FFFFFF !important;
+// }
+//
+// .navbar-default .navbar-toggle {
+//   border-color: transparent;
+//   color: #ffffff;
+// }
+//
+// #hamburger .icon-bar {
+//   background: white;
+// }
+//
+// #hamburger:hover,
+// #hamburger.is-active {
+//   background: white !important;
+// }
+//
+// #hamburger:hover .icon-bar,
+// #hamburger.is-active .icon-bar {
+//   background: #F4511e !important;
+// }
+//
+// #hamburger:focus {
+//   background: #F4511e;
+// }
+//
+// #hamburger:focus .icon-bar {
+//   background: #FFF;
+// }
