fixed internal page

--- a/my-awesome-site/_includes/header.html
+++ b/my-awesome-site/_includes/header.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-dark bg-dark navbar-default fixed-top navbar-expand-lg section-nav">
+<nav class="navbar bg-color-change navbar-dark navbar-default fixed-top navbar-expand-lg section-nav">
   <div class="container">
     <a class="navbar-brand" href="#home">Thigpen Designs</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
