--- a/my-awesome-site/_layouts/default-internal.html
+++ b/my-awesome-site/_layouts/default-internal.html
@@ -8,7 +8,7 @@
     {%- include header-internal.html -%}
 
     <main class="page-content p-5" aria-label="Content">
-      <div class="mt-5 wrapper container">
+      <div class="mt-5">
         {{ content }}
       </div>
     </main>
