--- a/my-awesome-site/_layouts/page-internal.html
+++ b/my-awesome-site/_layouts/page-internal.html
@@ -1,14 +1,15 @@
 ---
 layout: default-internal
 ---
-<div class="mt-5 container">
-
+<div class="mt-5">
   <article class="post">
-    <header class="post-header">
-      <h1 class="mpost-title">{{ page.title | escape }}</h1>
-    </header>
+    <div class="container-fluid" style="padding: 0">
+      <div class="c-filter img-responsive d-flex align-items-end"
+          style="background: url('/assets/img/nuyu.jpg') no-repeat center center; height: 300px; background-size: cover;">
+          <h1 class="ml-3 mpost-title">{{ page.title | escape }}</h1>
+  </div>
 
-    <div class="post-content">
+    <div class="px-3 pt-3 post-content">
       {{ content }}
     </div>
 
