add verbiage, edited pages, now orking on posts

--- a/my-awesome-site/_sass/_code.scss
+++ b/my-awesome-site/_sass/_code.scss
@@ -3,7 +3,7 @@
 // Inline and block-level code snippets. Includes tweaks to syntax highlighted
 // snippets from Pygments/Rouge and Gist embeds.
 
-@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:300,400);
+// @import url(https://fonts.googleapis.com/css?family=Josefin+Sans:300,400);
 
 
 code,
