--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -34,7 +34,7 @@ layout: default
        blurb="Some stuff about user ex"
        image="iterations.png"
        content="For over twenty years I've been a professional in the creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world."
-       linktopage="uxui.html" %}
+       linktopage="design-ux.html" %}
   </div>
   <div class="col-lg-6">
     {% include info_section.html
@@ -43,7 +43,7 @@ layout: default
        subtitle="User Interface"
        blurb="Some stuff about user interfact"
        image="testitout.png" content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world."
-       linktopage="ui.html" %}
+       linktopage="design-ui.html" %}
   </div>
 </div>
 
@@ -74,7 +74,12 @@ layout: default
     <div class="col-lg-6">
       {% include info_section.html
          section="animantion"
-         title="Animation" subtitle="Animation" blurb="Some stuff about user interfact" image="kedi.gif" content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="animation.html" %}
+         title="Animation"
+         subtitle="Animation"
+         blurb="Some stuff about user interfact"
+         image="kedi.gif"
+         content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world."
+         linktopage="animation.html" %}
     </div>
   </div>
 
@@ -82,6 +87,10 @@ layout: default
   <div class="col-lg-12">
     {% include info_section.html
        section="About
-       Me" title="About Me" subtitle="Jack of all trades, master of a few of them." blurb="Some stuff about user interfact" image="me.JPG" content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world." linktopage="animation.html" %}
+       Me" title="About Me"
+       subtitle="Jack of all trades, master of a few of them."
+       blurb="Some stuff about user interfact"
+       image="me.JPG" content="creative industry. I've illustrated for the Wall Street Journal, animated for Dreamworont End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world."
+       linktopage="about.html" %}
   </div>
 </div>
