--- a/my-awesome-site/_layouts/page-internal.html
+++ b/my-awesome-site/_layouts/page-internal.html
@@ -5,11 +5,11 @@ layout: default-internal
   <article class="post">
     <div class="container-fluid" style="padding: 0">
       <div class="c-filter img-responsive d-flex align-items-end"
-          style="background: url('/assets/img/nuyu.jpg') no-repeat center center; height: 300px; background-size: cover;">
-          <h1 class="ml-3 mpost-title">{{ page.title | escape }}</h1>
+          style="background: linear-gradient( rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75) ), url('/assets/img/internal/{{ page.image }}') no-repeat center center; height: 300px; background-size: cover;">
+          <h1 class="ml-5 mpost-title">{{ page.title | escape }}</h1>
   </div>
 
-    <div class="px-3 pt-3 post-content">
+    <div class="px-5 pt-3 post-content">
       {{ content }}
     </div>
 
