--- a/my-awesome-site/_layouts/page-internal.html
+++ b/my-awesome-site/_layouts/page-internal.html
@@ -15,7 +15,12 @@ layout: default-internal
 
   </article>
 
-  <div class="mt-5">
+  <div class="d-flex justify-content-center">
+
+    {%- include card-post.html -%}
+  </div>
+
+  <!-- <div class="mt-5">
     <ul class="mt-5">
 {% for post in site.posts %}
   <li>
@@ -24,4 +29,4 @@ layout: default-internal
 {% endfor %}
 </ul>
   </div>
-</div>
+</div> -->
