--- a/my-awesome-site/_styleheets/_type.scss
+++ b/my-awesome-site/_styleheets/_type.scss
@@ -108,3 +108,8 @@ blockquote p:last-child {
 .footer-color {
   background-color: #3D3B39;
 }
+
+.card-body {
+  color: black;
+  background: red;
+}
