--- a/my-awesome-site/_sass/_layout.scss
+++ b/my-awesome-site/_sass/_layout.scss
@@ -109,3 +109,13 @@ $color30darken: darken($color1, 30%);
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
+
+.card-body p {
+  color: black;
+}
