--- a/my-awesome-site/_layouts/page-internal.html
+++ b/my-awesome-site/_layouts/page-internal.html
@@ -17,16 +17,5 @@ layout: default-internal
 
   <div class="d-flex justify-content-center">
 
-    {%- include card-post.html -%}
+    {%- include card-post-overlay.html -%}
   </div>
-
-  <!-- <div class="mt-5">
-    <ul class="mt-5">
-{% for post in site.posts %}
-  <li>
-    <a href="{{ post.url }}">{{ post.title }}</a>
-  </li>
-{% endfor %}
-</ul>
-  </div>
-</div> -->
