--- a/my-awesome-site/_sass/_type.scss
+++ b/my-awesome-site/_sass/_type.scss
@@ -1,5 +1,6 @@
 // Typography
 //
+@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css);
 // Headings, body text, lists, and other misc typographic elements.
 @import 'layout';
 // Headings
@@ -106,4 +107,26 @@ blockquote p:last-child {
 
 .footer-color {
   background-color: #3D3B39;
+}
+
+.card-body h5{
+
+    color: black;
+
+}
+
+.card-body {
+  padding-top: 0;
+}
+
+.card-img-overlay {
+  h3 {
+    font-size: 18px;
+  }
+  h4 {
+    font-size: 16px;
+  }
+  p {
+    font-size: 16px;
+  }
 }
