--- a/my-awesome-site/_sass/_layout.scss
+++ b/my-awesome-site/_sass/_layout.scss
@@ -111,11 +111,22 @@ $color30darken: darken($color1, 30%);
 }
 
 .card-img-top {
-    width: 100%;
-    height: 15vw;
+  max-height: 100%;
+  max-width: 100%;
+  height: 100%;
     object-fit: cover;
 }
 
 .card-body p {
   color: black;
+}
+
+.thumbnail img {
+    max-height: 100%;
+    max-width: 100%;
+    filter: brightness(0.25);
+}
+
+.thumbnail {
+  height: 150px;
 }
