--- a/my-awesome-site/_includes/info_section.html
+++ b/my-awesome-site/_includes/info_section.html
@@ -12,7 +12,7 @@
               <div class="col-sm">
                 <div class="row p-1">
                   <div class="col-xs-12 col-lg-4">
-                    <img class="img-circle img-size-small" src="assets/img/{{ include.image }}" />
+                    <img class="img-circle img-size-small b-lazy" data-src="assets/img/{{ include.image }}" src="assets/img/{{ include.image }}" />
                   </div>
                   <div  class="col-xs-12 col-lg-8">
                     <p class="primary-color">
