--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
     </section>
   </div>
 
-<div class="row p-5 section-uiux" id="uiux">
+<div class="wow fadeIn row p-5 section-uiux" id="uiux">
   <div class="col-lg-6">
     {% include info_section.html
        section="code"
@@ -47,7 +47,7 @@ layout: default
   </div>
 </div>
 
-<div class="p-5 section-about" id="code">
+<div class="wow fadeIn p-5 section-about" id="code">
   <div class="col-lg-12">
     {% include info_section.html
       section="code"
@@ -61,7 +61,7 @@ layout: default
 </div>
 
 
-  <div class="row p-5 section-illo" id="illustration">
+  <div class="wow fadeIn row p-5 section-illo" id="illustration">
     <div class="col-lg-6">
       {% include info_section.html
          section="illustration"
@@ -83,7 +83,7 @@ layout: default
     </div>
   </div>
 
-<div class="p-5 section-about" id="about">
+<div class="wow fadeIn p-5 section-about" id="about">
   <div class="col-lg-12">
     {% include info_section.html
        section="About
