--- a/my-awesome-site/_layouts/post.html
+++ b/my-awesome-site/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: default-internal
+layout: default-internal-post
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
