--- a/my-awesome-site/_includes/header-internal.html
+++ b/my-awesome-site/_includes/header-internal.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-default fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="../index.html">Thigpen Designs Inner</a>
+    <a class="navbar-brand" href="../../../../index.html">Thigpen Designs</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,19 +11,19 @@
           <a class="nav-link" href="../../../../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/about.html">About</a>
+          <a class="nav-link" href="/pages/design-ux.html">UX</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/design-ui.html">Ui</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/code.html">Front End</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/illustration.html">Illustration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/ux.html">UX</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/ui.html">Ui</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/code.html">Front End</a>
+          <a class="nav-link" href="/pages/about.html">About</a>
         </li>
 
       </ul>
