--- a/my-awesome-site/_layouts/default-internal.html
+++ b/my-awesome-site/_layouts/default-internal.html
@@ -7,7 +7,7 @@
 
     {%- include header-internal.html -%}
 
-    <main class="page-content p-5" aria-label="Content">
+    <main class="page-content" aria-label="Content">
       <div class="mt-5">
         {{ content }}
       </div>
