worked on cards and content

--- a/my-awesome-site/_includes/header-internal.html
+++ b/my-awesome-site/_includes/header-internal.html
@@ -23,6 +23,9 @@
           <a class="nav-link" href="/pages/illustration.html">Illustration</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/pages/animation.html">Animation</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/pages/about.html">About</a>
         </li>
 
