--- a/my-awesome-site/_includes/header.html
+++ b/my-awesome-site/_includes/header.html
@@ -19,6 +19,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#illustration">Illustration</a>
         <li class="nav-item">
+          <li class="nav-item">
+            <a class="nav-link" href="#illustration">Animation</a>
+          <li class="nav-item">
           <a class="nav-link" href="#about">About</a>
         </li>
         </li>
