--- a/my-awesome-site/_includes/card-post-animation.html
+++ b/my-awesome-site/_includes/card-post-animation.html
@@ -1,11 +1,30 @@
-<div class="card-group col-sm-12 col-md-12 col-lg-12 mb-3">
+<div class="card-columns">
   {% for post in site.categories.animation %}
-  <div class="card thumbnail wow fadeIn">
-    <img class="card-img-top mb-0" src="/assets/img/{{ post.image }}" alt="{{ post.title }}">
-    <div class="card-img-overlay">
-      <a href="{{ post.url }}" ><h3 class="card-title mt-0">{{ post.title }}</h3></a>
-      <a href="{{ post.url }}" ><p class="card-text">{{ post.excerpt }}</p></a>
-    </div>
+  <div class="card thumbnail wow fadeIn" style="width: 15rem;">
+    <img class="card-img-bottom img-fluid mb-0" src="/assets/img/{{ post.image }}" alt="{{ post.title }}">
+    <a href="{{ post.url }}"><div class="card-img-overlay">
+      <h4 class="card-title">{{ post.title }}</h4>
+      <p class="card-text">{{ post.excerpt }}</p>
+      <!-- <a href="{{ post.url }}" class="btn btn-primary">See Project</a> -->
+    </div></a>
   </div>
 {% endfor %}
 </div>
+
+<!--
+<div class="card">
+    <img class="card-img-top img-fluid" src="..." alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title that wraps to a new line</h4>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+  </div> -->
+<!--
+  <div class="card" style="width: 20rem;">
+    <img class="card-img-top" src="/assets/img/{{ post.image }}" alt="{{ post.title }}">
+    <div class="card-block">
+      <h4 class="card-title">{{ post.title }}</h4>
+      <p class="card-text">{{ post.excerpt }}</p>
+      <a href="#" class="btn btn-primary">See Project</a>
+    </div>
+  </div> -->
