--- a/my-awesome-site/_includes/footer.html
+++ b/my-awesome-site/_includes/footer.html
@@ -7,7 +7,7 @@
     <div class="row">
 
       <!-- Grid column -->
-      <div class="col-md-6 mt-md-0 mt-3">
+      <div class="col-md-6 mt-md-0 mt-3 px-5">
 
         <!-- Content -->
         <h5 class="text-uppercase">Thigpen Designs</h5>
@@ -37,9 +37,13 @@
           <li>
             <a href="https://github.com/sThig">GitHub <i class="fab fa-github-alt"></i></a>
           </li>
+          <li>
+            <a href="https://www.linkedin.com/in/scott-thigpen-43509878/">LinkedIn <i class="fab fa-linkedin"></i></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/scott-thigpen-43509878/">Dribbble <i class="fab fa-dribbble-square"></i></a>
+          </li>
         </ul>
-
-
       </div>
       <!-- Grid column -->
 
